# Data-Analysis-Using-Agentic-AI

./: LICENSE  README.md  docker-compose.dev.yaml
.github/workflows/: pylint.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx
