[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "fastapi>=0.119.0",
    "fastmcp>=2.12.5",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "ruff>=0.14.1",
    "uvicorn>=0.37.0",
]
